# make_NN

./: .gitignore  CMakeLists.txt
include/: neural_arch.h
src/: main.cpp
